--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <main class="videos">
 
     <div class="video-card">
-        <img src="images/photo01.jpg">
+        <img src="photo01.jpg">
         <div class="video-info">
             <h3>video 1 for you </h3>
             <p>• 1.2M views</p>
         </div>
     </div>
       <div class="video-card">
-        <img src="images/photo01.jpg">
+        <img src="photo01.jpg">
         <div class="video-info">
             <h3>video 2 for you</h3>
             <p>• 2.6M views</p>
@@ -34,13 +34,13 @@
     </div>
 
       <div class="video-card">
-        <img src="images/photo01.jpg">
+        <img src="photo01.jpg">
         <div class="video-info">
             <h3>video 3 for you</h3>
             <p>• 302k views</p>
         </div>
     </div>  <div class="video-card">
-        <img src="images/photo01.jpg">
+        <img src="photo01.jpg">
         <div class="video-info">
             <h3>video 4 for you</h3>
             <p>• 705k views</p>
